--- a/part_6/styles.css
+++ b/part_6/styles.css
@@ -1,9 +1,50 @@
 body {
   font-family: "Computer Modern Serif";
   font-size: 16pt;
+  width: 960px;
+  margin-left: 152px;
+  margin-right:auto;
+  padding-top: 63px;
 }
 
+h1{
+  text-align: center;
+  letter-spacing:10.5px;
+}
 
+blockquote{
+  margin-right:0px;
+  margin-left: 0px;
+}
+
+.subtitle{
+  text-align: center;
+  font-style: italic;
+  letter-spacing:3.2px;
+}
+
+.quote{
+  text-align: left;
+  font-style: italic;
+  letter-spacing:0px;
+}
+
+footer{
+  text-align:right;
+  text-transform:uppercase;
+}
+
+footer a{
+  text-decoration:none;
+}
+
+h2{
+  font-size: 16pt;
+  text-transform: uppercase;
+  border-top: medium solid;
+  border-bottom: thin solid;
+  letter-spacing: 5px;
+}
 /* ----------------------------------------------------------------- */
 /* The scary stuff below is just to get the right font loaded up.    */
 /* Don't worry about it. Write your CSS rules above the dotted line. */
