--- a/part_7/styles.css
+++ b/part_7/styles.css
@@ -3,3 +3,20 @@
 * {
   border: thin red solid;
 }
+
+h1{
+	background-color: silver;
+	margin-top: 20px;
+	height: 200px;
+}
+
+a{
+	background-color: blue;
+	color:white;
+	height:30px;
+	width:150px;
+	border-radius: 20px;
+	text-decoration: none;
+	display: inline-block;
+	text-align: center;
+}
